--- a/index.html
+++ b/index.html
@@ -43,13 +43,34 @@
             .catch(err => alert("Error: " + err));
         }
 
-        function renderScanner() {
-            window.html5QrcodeScanner = new Html5QrcodeScanner("reader", { fps: 10, qrbox: 250 });
-            html5QrcodeScanner.render(onScanSuccess);
+function renderScanner() {
+    window.html5QrcodeScanner = new Html5QrcodeScanner("reader", { 
+        fps: 20, // Increased frame rate for faster detection
+        qrbox: function(viewfinderWidth, viewfinderHeight) {
+            // This creates a wide rectangle that works for both 
+            // long barcodes and square QR codes
+            return {
+                width: viewfinderWidth * 0.8,
+                height: viewfinderHeight * 0.4
+            };
+        },
+        formatsToSupport: [ 
+            Html5QrcodeSupportedFormats.QR_CODE,
+            Html5QrcodeSupportedFormats.CODE_39,
+            Html5QrcodeSupportedFormats.CODE_128,
+            Html5QrcodeSupportedFormats.EAN_13
+        ],
+        // Tries to use the phone's built-in hardware scanner for speed
+        experimentalFeatures: {
+            useBarCodeDetectorIfSupported: true
         }
+    });
+    html5QrcodeScanner.render(onScanSuccess);
+}
 
         renderScanner();
     </script>
 </body>
 </html>
+
 
